--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,13 @@ transformers==4.51.3
 numpy==2.2.5
 huggingface-hub==0.30.2
 jupyter==1.1.1
+anthropic==0.51.0
+openai==1.77.0
+pandas==2.2.3
+torch==2.7.0
+torchvision==2.7.0
+torchaudio==2.7.0
+backoff==2.2.1
+dotenv==0.9.9
+twilio==9.6.0
+datasets==3.6.0
